# boatrace-app

./: README.md  Todo.md  要件定義.md
backend/: pyproject.toml  start_server.sh
backend/src/backend/: main.py
frontend/: package-lock.json
frontend/src/: App.css  App.tsx  api.ts
